--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,9 @@
 # Golang CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.5
 jobs:
   test:
     docker:
@@ -11,7 +13,7 @@ jobs:
           - KIBANA_URL: "http://kb:5601"
           - KIBANA_USERNAME: "elastic"
           - KIBANA_PASSWORD: "changeme"
-      - image: docker.elastic.co/elasticsearch/elasticsearch:7.4.0
+      - image: docker.elastic.co/elasticsearch/elasticsearch:7.4.2
         name: es
         environment:
           - cluster.name: "test"
@@ -20,7 +22,7 @@ jobs:
           - xpack.security.enabled: "true"
           - ES_JAVA_OPTS: "-Xms512m -Xmx512m"
           - path.repo: "/tmp"
-      - image: docker.elastic.co/kibana/kibana:7.4.0
+      - image: docker.elastic.co/kibana/kibana:7.4.2
         name: kb
         environment:
           ELASTICSEARCH_HOSTS: http://es:9200
@@ -31,7 +33,12 @@ jobs:
       - checkout
       - run: until $(curl --output /dev/null --silent --head --fail -u elastic:changeme http://kb:5601); do sleep 5; done
       - run: curl -XPOST -u elastic:changeme http://es:9200/_license/start_trial?acknowledge=true
+      - run: curl -XPOST -u elastic:changeme http://es:9200/_license/start_trial?acknowledge=true
+      - run: sleep 10
       - run: make testacc
+      - codecov/upload:
+          file: coverage.txt
+          flags: unittest
   build:
     docker:
       - image: circleci/golang:1.12
