fix: fix provider to not exit when kibana upper than 7.x. Move acctest on ELK 8.0.1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "elasticsearch"
     environment:
       ELASTICSEARCH_HOSTS: http://elasticsearch:9200
-      ELASTICSEARCH_USERNAME: elastic
+      ELASTICSEARCH_USERNAME: kibana
       ELASTICSEARCH_PASSWORD: changeme
     ports:
       - 5601:5601
