--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,8 +27,10 @@ jobs:
         run: |
           set -e
           docker-compose up -d
-          until $(curl --output /dev/null --silent --head --fail -u elastic:changeme http://localhost:9200); do sleep 5; done
-          until $(curl --output /dev/null --silent --head --fail -u elastic:changeme http://localhost:5601); do sleep 5; done
+          echo "Waiting for Elasticsearch availability"
+          until curl -s http://localhost:9200 | grep -q 'missing authentication credentials'; do sleep 30; done;
+          echo "Setting kibana_system password"
+          until curl -s -X POST -u elastic:changeme -H "Content-Type: application/json" http://localhost:9200/_security/user/kibana_system/_password -d "{\"password\":\"changeme\"}" | grep -q "^{}"; do sleep 10; done
           curl -XPOST -u elastic:changeme http://localhost:9200/_license/start_trial?acknowledge=true
           sleep 10
       - name: Run build
