--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Elasticsearch / Kibana
         run: |
           set -e
-          docker-compose up -d
+          docker-compose up &
           echo "Waiting for Elasticsearch availability"
           until curl -s http://localhost:9200 | grep -q 'missing authentication credentials'; do sleep 30; done;
           echo "Setting kibana_system password"
