--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,13 +26,14 @@ jobs:
       - name: Setup Elasticsearch / Kibana
         run: |
           set -e
-          docker-compose up &
+          docker-compose up elasticsearch &
           echo "Waiting for Elasticsearch availability"
           until curl -s http://localhost:9200 | grep -q 'missing authentication credentials'; do sleep 30; done;
           echo "Setting kibana_system password"
           until curl -s -X POST -u elastic:changeme -H "Content-Type: application/json" http://localhost:9200/_security/user/kibana_system/_password -d "{\"password\":\"changeme\"}" | grep -q "^{}"; do sleep 10; done
           curl -XPOST -u elastic:changeme http://localhost:9200/_license/start_trial?acknowledge=true
-          sleep 10
+          docker-compose up kibana &
+          sleep 30
       - name: Run build
         run: make build
       - name: Run acceptance tests
